# bib-converter

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix
resources/: resources.xml.in
src/: args.c  bib.c  format.c  internal.h  main.c  parse.c
